Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,32 +498,55 @@
     ]
   },
   {
-    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
-    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
-    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
+    "title": "Người trẻ Hà Nội đổ xô đi chụp hoa sưa nở rộ",
+    "content": "Người trẻ Hà Nội đang đổ xô đến chụp ảnh hoa sưa nở rộ tại các điểm nổi tiếng như phố Ngọc Hà, quận Ba Đình. Hoa sưa, với cành hoa trắng nổi bật, thường nở vào cuối tháng 2 và đầu tháng 3, thu hút đông đảo người yêu thích chụp ảnh. Tại quán cà phê trên phố Ngọc Hà, lượng khách tăng mạnh, với trung bình 400 lượt khách mỗi ngày, nhiều người đến để không bỏ lỡ mùa hoa nở.",
+    "link": "https://vnexpress.net/nguoi-tre-ha-noi-do-xo-di-chup-hoa-sua-no-ro-4860052.html",
+    "cat": "giai-tri",
+    "positivity": 8,
+    "importance": 6,
+    "question": "Tại sao người trẻ Hà Nội lại đổ xô đi chụp hoa sưa?",
     "answers": [
       {
-        "text": "Bệnh sởi",
+        "text": "Vì hoa sưa nở rộ và đẹp mắt.",
         "correct": true
       },
       {
-        "text": "Ngộ độc thực phẩm",
+        "text": "Vì hoa sưa có màu sắc đặc biệt.",
         "correct": false
       },
       {
-        "text": "Nhiễm trùng đường tiêu hóa",
+        "text": "Vì đây là một hoạt động thể thao thú vị.",
         "correct": false
       },
       {
-        "text": "Viêm phổi",
+        "text": "Vì hoa sưa chỉ nở vào mùa hè.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Biến chứng nguy hiểm của viêm gan E",
+    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
+    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "cat": "suc-khoe",
+    "positivity": 5,
+    "importance": 8,
+    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "answers": [
+      {
+        "text": "Suy gan cấp và biến chứng thần kinh",
+        "correct": true
+      },
+      {
+        "text": "Chỉ gây triệu chứng nhẹ",
         "correct": false
       },
       {
-        "text": "Sốt xuất huyết",
+        "text": "Không có biến chứng gì",
+        "correct": false
+      },
+      {
+        "text": "Chỉ ảnh hưởng đến gan mà thôi",
         "correct": false
       }
     ]
@@ -556,28 +579,32 @@
     ]
   },
   {
-    "title": "Biến chứng nguy hiểm của viêm gan E",
-    "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
-    "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
+    "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
+    "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
+    "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
     "cat": "suc-khoe",
-    "positivity": 5,
+    "positivity": 6,
     "importance": 8,
-    "question": "Viêm gan E có thể gây ra những biến chứng nào?",
+    "question": "Tiêu chảy ở trẻ có thể là triệu chứng của bệnh gì?",
     "answers": [
       {
-        "text": "Suy gan cấp và biến chứng thần kinh",
+        "text": "Bệnh sởi",
         "correct": true
       },
       {
-        "text": "Chỉ gây triệu chứng nhẹ",
+        "text": "Ngộ độc thực phẩm",
         "correct": false
       },
       {
-        "text": "Không có biến chứng gì",
+        "text": "Nhiễm trùng đường tiêu hóa",
         "correct": false
       },
       {
-        "text": "Chỉ ảnh hưởng đến gan mà thôi",
+        "text": "Viêm phổi",
+        "correct": false
+      },
+      {
+        "text": "Sốt xuất huyết",
         "correct": false
       }
     ]
