--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -502,6 +502,37 @@
     ]
   },
   {
+    "title": "Bị ung thư hạch bạch huyết kiêng ăn gì?",
+    "content": "Bài viết đề cập đến chế độ ăn uống cần kiêng khem cho người mắc ung thư hạch bạch huyết. Người bệnh nên hạn chế chất béo động vật, thực phẩm chế biến sẵn, bánh ngọt và đồ uống có cồn để tránh làm tăng tác dụng phụ trong quá trình điều trị. Dinh dưỡng hợp lý đóng vai trò quan trọng trong việc nâng cao sức khỏe và hỗ trợ hiệu quả điều trị ung thư.",
+    "link": "https://vnexpress.net/bi-ung-thu-hach-bach-huyet-kieng-an-gi-4860185.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Người bị ung thư hạch bạch huyết nên kiêng ăn gì để hỗ trợ điều trị?",
+    "answers": [
+      {
+        "text": "Hạn chế chất béo động vật và thực phẩm chế biến sẵn",
+        "correct": true
+      },
+      {
+        "text": "Tăng cường ăn nhiều thịt đỏ",
+        "correct": false
+      },
+      {
+        "text": "Uống nhiều rượu bia",
+        "correct": false
+      },
+      {
+        "text": "Ăn các loại bánh ngọt thường xuyên",
+        "correct": false
+      },
+      {
+        "text": "Tránh ăn rau xanh và trái cây",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Khu đô thị 381 ha bỏ hoang hơn chục năm",
     "content": "Khu đô thị Golden Hills City, rộng 381 ha ven sông Cu Đê, đã bị bỏ hoang hơn chục năm do vướng mắc pháp lý và vi phạm trong thủ tục giao đất. Dự án được cấp giấy chứng nhận vào năm 2010 với tổng mức đầu tư hơn 4.440 tỷ đồng, nhưng đã gặp phải nhiều vấn đề pháp lý nghiêm trọng dẫn đến tình trạng lãng phí tài nguyên đất đai. Mặc dù chủ đầu tư đã cố gắng gỡ vướng và xin phép điều chỉnh tiến độ dự án, nhưng dự án vẫn chưa thể tái khởi động, khiến khu vực này ngày càng xuống cấp và trở thành nơi chăn thả gia súc.",
     "link": "https://vnexpress.net/khu-do-thi-381-ha-bo-hoang-hon-chuc-nam-4860077.html",
@@ -524,6 +555,37 @@
       },
       {
         "text": "Vì chủ đầu tư không đủ khả năng thực hiện dự án.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "NSND Công Lý tuổi 52: Tự tin chụp ảnh cùng 2 con, bị vợ \"kể xấu\"",
+    "content": "NSND Công Lý, ở tuổi 52, đã chụp một bộ ảnh cùng hai con, thể hiện sự trẻ trung và tươi tắn. Vợ anh, kém 15 tuổi, nhận xét anh là người khó tính nhưng cũng rất tâm lý. Thục Anh, con gái lớn của Công Lý, chia sẻ rằng bộ ảnh này nhằm tăng cường sự thân thiết giữa bố và hai chị em. Dù bận rộn với công việc, Công Lý vẫn dành thời gian cho gia đình, cho thấy tình cảm sâu sắc của anh với các con.",
+    "link": "https://dantri.com.vn/giai-tri/nsnd-cong-ly-tuoi-52-tu-tin-chup-anh-cung-2-con-bi-vo-ke-xau-20250312012958891.htm",
+    "cat": "gia-dinh",
+    "positivity": 8,
+    "importance": 7,
+    "question": "NSND Công Lý vừa chụp ảnh cùng ai?",
+    "answers": [
+      {
+        "text": "Hai con của anh",
+        "correct": true
+      },
+      {
+        "text": "Bạn bè",
+        "correct": false
+      },
+      {
+        "text": "Người hâm mộ",
+        "correct": false
+      },
+      {
+        "text": "Đồng nghiệp",
+        "correct": false
+      },
+      {
+        "text": "Các nghệ sĩ khác",
         "correct": false
       }
     ]
@@ -668,6 +730,33 @@
     ]
   },
   {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
     "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
     "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
@@ -694,33 +783,6 @@
       },
       {
         "text": "Sốt xuất huyết",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
@@ -1398,6 +1460,64 @@
     ]
   },
   {
+    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
+    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
+    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
+    "answers": [
+      {
+        "text": "14 kg",
+        "correct": true
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "20 kg",
+        "correct": false
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Sun World và Vietravel hợp tác chiến lược",
+    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
+    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
+    "cat": "du-lich",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
+    "answers": [
+      {
+        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
+        "correct": true
+      },
+      {
+        "text": "Tăng giá vé vào cửa cho du khách.",
+        "correct": false
+      },
+      {
+        "text": "Giảm số lượng khách tham quan.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ tổ chức tour du lịch trong nước.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Một doanh nghiệp bán lẻ muốn mở 3 cửa hàng mỗi ngày",
     "content": "WinCommerce, thuộc Tập đoàn Masan, có kế hoạch mở mới 1.000 cửa hàng trong năm 2025, tương đương với việc mở trung bình 3 cửa hàng mỗi ngày. Doanh nghiệp này đã ghi nhận sự tăng trưởng doanh thu ổn định trong năm 2024, với các mô hình cửa hàng mới như WiN và WinMart+ Rural. Chính sách giảm thuế VAT trong năm 2025 được kỳ vọng sẽ hỗ trợ hơn nữa cho hoạt động kinh doanh bán lẻ của WinCommerce, tạo điều kiện thuận lợi cho việc mở rộng quy mô.",
     "link": "https://tuoitre.vn/mot-doanh-nghiep-ban-le-muon-mo-3-cua-hang-moi-ngay-20250311172408279.htm",
@@ -1455,64 +1575,6 @@
       },
       {
         "text": "Cung cấp dịch vụ mua sắm cao cấp",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sun World và Vietravel hợp tác chiến lược",
-    "content": "Công ty Sun World và Vietravel đã ký kết Biên bản ghi nhớ hợp tác chiến lược nhằm nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí. Vietravel sẽ phân phối vé vào tổ hợp du lịch Sun World và xây dựng các tour du lịch kết hợp với vé tham quan. Thỏa thuận này cũng bao gồm nhiều chương trình ưu đãi cho khách hàng, với mục tiêu đạt ít nhất 120.000 lượt khách trong năm 2025, đồng thời nâng cao nhận diện thương hiệu của cả hai bên.",
-    "link": "https://tuoitre.vn/sun-world-va-vietravel-hop-tac-chien-luoc-20250312071953725.htm",
-    "cat": "du-lich",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Sun World và Vietravel đã hợp tác để làm gì?",
-    "answers": [
-      {
-        "text": "Nâng cao trải nghiệm khách hàng tại các khu vui chơi giải trí.",
-        "correct": true
-      },
-      {
-        "text": "Tăng giá vé vào cửa cho du khách.",
-        "correct": false
-      },
-      {
-        "text": "Giảm số lượng khách tham quan.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ tổ chức tour du lịch trong nước.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Sụt 14 kg trong 6 tháng do bệnh lupus ban đỏ",
-    "content": "Bà Hòa, 66 tuổi, đã sụt 14 kg trong 6 tháng do mắc bệnh lupus ban đỏ, một bệnh tự miễn mạn tính. Sau khi nhập viện trong tình trạng suy kiệt và nhiễm trùng nặng, các bác sĩ đã xác định được nguyên nhân và tiến hành điều trị tích cực. Bệnh lupus ban đỏ thường biểu hiện với các triệu chứng như đau nhức, rụng tóc và dễ nhầm lẫn với các bệnh khác. Nếu không được điều trị kịp thời, bệnh có thể dẫn đến những biến chứng nghiêm trọng.",
-    "link": "https://vnexpress.net/sut-14-kg-trong-6-thang-do-benh-lupus-ban-do-4860083.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bà Hòa đã sụt bao nhiêu kg trong 6 tháng do bệnh lupus ban đỏ?",
-    "answers": [
-      {
-        "text": "14 kg",
-        "correct": true
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "20 kg",
-        "correct": false
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
         "correct": false
       }
     ]
@@ -3114,33 +3176,6 @@
     ]
   },
   {
-    "title": "Lý do người bệnh viêm khớp nên hạn chế đường",
-    "content": "Bài viết nhấn mạnh rằng người bệnh viêm khớp nên hạn chế tiêu thụ đường để giảm tình trạng viêm và kiểm soát các triệu chứng bệnh. Đường không chỉ làm tăng axit uric mà còn có thể dẫn đến các vấn đề sức khỏe khác như bệnh tim mạch và béo phì, làm trầm trọng thêm tình trạng viêm khớp. Nghiên cứu cho thấy các loại thực phẩm và đồ uống có đường, như soda và bánh ngọt, có thể làm nặng thêm các triệu chứng viêm khớp dạng thấp và thoái hóa khớp. Do đó, người bệnh cần chú ý đến lượng đường nạp vào hàng ngày để cải thiện sức khỏe khớp.",
-    "link": "https://vnexpress.net/ly-do-nguoi-benh-viem-khop-nen-han-che-duong-4859548.html",
-    "cat": "suc-khoe",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao người bệnh viêm khớp nên hạn chế đường?",
-    "answers": [
-      {
-        "text": "Đường có thể làm tăng tình trạng viêm và đau khớp.",
-        "correct": true
-      },
-      {
-        "text": "Đường giúp cải thiện sức khỏe khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đường là nguồn năng lượng cần thiết cho cơ thể.",
-        "correct": false
-      },
-      {
-        "text": "Đường không ảnh hưởng đến viêm khớp.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Thói quen nào khiến sức khỏe phụ nữ giảm sút?",
     "content": "Bài viết điểm qua những thói quen ăn uống và sinh hoạt có thể ảnh hưởng tiêu cực đến sức khỏe của phụ nữ. Những thói quen tưởng chừng như vô hại nhưng lại gây ra sự thay đổi trong quá trình trao đổi chất và nội tiết. Việc nhận thức và thay đổi những thói quen này là rất quan trọng để duy trì sức khỏe tốt cho phái đẹp.",
     "link": "https://vnexpress.net/thoi-quen-nao-khien-suc-khoe-phu-nu-giam-sut-4859901.html",
@@ -3837,28 +3872,28 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
     "cat": "suc-khoe",
-    "positivity": 7,
+    "positivity": 9,
     "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
     "answers": [
       {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
         "correct": true
       },
       {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "text": "Tăng huyết áp nhanh chóng.",
         "correct": false
       },
       {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "text": "Gây ra tình trạng thừa cân.",
         "correct": false
       },
       {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -3891,28 +3926,28 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
     "cat": "suc-khoe",
-    "positivity": 9,
+    "positivity": 7,
     "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
     "answers": [
       {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "text": "Có, nhưng không phải tất cả trường hợp.",
         "correct": true
       },
       {
-        "text": "Tăng huyết áp nhanh chóng.",
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
         "correct": false
       },
       {
-        "text": "Gây ra tình trạng thừa cân.",
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
         "correct": false
       },
       {
-        "text": "Làm yếu hệ miễn dịch.",
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -4864,33 +4899,6 @@
       },
       {
         "text": "Vì không có thuốc chữa",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Guardiola về Tây Ban Nha cứu vãn hôn nhân",
-    "content": "HLV Pep Guardiola của Man City đã bí mật trở về Tây Ban Nha vào đầu tháng 3 để cố gắng cứu vãn hôn nhân với vợ, Cristina. Họ đã ở cùng nhau ba đêm tại Barcelona sau khi Guardiola tham dự trận đấu và trở về Manchester. Mối quan hệ của họ gặp trục trặc do Guardiola quá đam mê công việc và sự khác biệt về cuộc sống tại Manchester. Cặp đôi đã quen nhau từ năm 1989 và có ba con trước khi kết hôn vào năm 2014.",
-    "link": "https://vnexpress.net/guardiola-ve-tay-ban-nha-cuu-van-hon-nhan-4859466.html",
-    "cat": "gia-dinh",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Tại sao Guardiola trở về Tây Ban Nha vào tháng 3?",
-    "answers": [
-      {
-        "text": "Để cứu vãn hôn nhân với vợ Cristina.",
-        "correct": true
-      },
-      {
-        "text": "Để tham dự một sự kiện thể thao.",
-        "correct": false
-      },
-      {
-        "text": "Để gặp gỡ bạn bè cũ.",
-        "correct": false
-      },
-      {
-        "text": "Để tìm hiểu về ẩm thực Tây Ban Nha.",
         "correct": false
       }
     ]
