Update generated content

--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -81,6 +81,37 @@
     // Example JSON array with news objects
     const newsData = [
   {
+    "title": "Hòn Sơn Chà vừa được Đà Nẵng tiếp nhận từ Huế có tiềm năng du lịch như thế nào?",
+    "content": "Hòn Sơn Chà, một hòn đảo hoang sơ dưới chân núi Hải Vân, vừa được thành phố Đà Nẵng tiếp nhận từ thành phố Huế. Đảo có hệ sinh thái biển phong phú với nhiều loại san hô và cá quý, cùng với bãi cát trắng và nước biển trong vắt, tạo điều kiện lý tưởng cho du lịch. Đà Nẵng dự định phát triển hòn Sơn Chà thành khu nghỉ dưỡng sinh thái cao cấp, nhắm đến đối tượng khách du lịch siêu giàu, nhằm khai thác tiềm năng du lịch lớn của hòn đảo này.",
+    "link": "https://tuoitre.vn/hon-son-cha-vua-duoc-da-nang-tiep-nhan-tu-hue-co-tiem-nang-du-lich-nhu-the-nao-20250312105542699.htm",
+    "cat": "du-lich",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Hòn Sơn Chà có tiềm năng du lịch như thế nào?",
+    "answers": [
+      {
+        "text": "Hòn Sơn Chà có hệ sinh thái phong phú và cảnh đẹp tự nhiên hấp dẫn.",
+        "correct": true
+      },
+      {
+        "text": "Hòn Sơn Chà không có gì đặc biệt.",
+        "correct": false
+      },
+      {
+        "text": "Hòn Sơn Chà chỉ là một hòn đảo nhỏ không thu hút khách du lịch.",
+        "correct": false
+      },
+      {
+        "text": "Hòn Sơn Chà đã được phát triển thành khu nghỉ dưỡng từ lâu.",
+        "correct": false
+      },
+      {
+        "text": "Hòn Sơn Chà không có hải sản tươi ngon.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Võ sĩ một tay gây sốt ở ONE Championship",
     "content": "Jake Peacock, một võ sĩ cụt cánh tay phải, đã thu hút sự chú ý tại ONE Championship với thành tích ấn tượng 14 chiến thắng trong 15 trận đấu. Dù sinh ra không có cánh tay phải do dây rốn quấn quanh, Peacock không để điều này ngăn cản đam mê võ thuật của mình. Anh bắt đầu học karate từ khi 7 tuổi và đã đạt nhiều thành tích cao trong sự nghiệp đấu võ, truyền cảm hứng cho nhiều người khác với câu chuyện vượt qua khó khăn của mình.",
     "link": "https://vnexpress.net/vo-si-mot-tay-gay-sot-o-one-championship-4860105.html",
@@ -340,33 +371,6 @@
     ]
   },
   {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Tiêu chảy - triệu chứng dễ nhầm lẫn khi trẻ nhiễm sởi",
     "content": "Tiêu chảy có thể là triệu chứng dễ nhầm lẫn với các bệnh tiêu hóa khi trẻ nhiễm sởi, dẫn đến nguy cơ suy kiệt và tử vong nếu không được điều trị kịp thời. Theo bác sĩ Lê Thị Trúc Phương, tiêu chảy là biến chứng phổ biến ở trẻ mắc sởi, với tỷ lệ 29,35% ở một nghiên cứu tại Việt Nam. Phụ huynh cần chú ý đến các dấu hiệu như sốt cao và tiêu chảy để kịp thời đưa trẻ đến cơ sở y tế, đồng thời duy trì chế độ dinh dưỡng và bù nước hợp lý.",
     "link": "https://vnexpress.net/tieu-chay-trieu-chung-de-nham-lan-khi-tre-nhiem-soi-4860180.html",
@@ -393,6 +397,33 @@
       },
       {
         "text": "Sốt xuất huyết",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
@@ -3482,33 +3513,6 @@
     ]
   },
   {
-    "title": "Lợi ích khi ăn dâu tây thường xuyên",
-    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
-    "cat": "suc-khoe",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
-    "answers": [
-      {
-        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
-        "correct": true
-      },
-      {
-        "text": "Tăng huyết áp nhanh chóng.",
-        "correct": false
-      },
-      {
-        "text": "Gây ra tình trạng thừa cân.",
-        "correct": false
-      },
-      {
-        "text": "Làm yếu hệ miễn dịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Chuyên gia: 'Tiêm gộp nhiều vaccine tạo hiệu quả miễn dịch sớm'",
     "content": "Theo TS.BS Nguyễn An Nghĩa, việc tiêm gộp nhiều vaccine cho trẻ có thể tạo ra hiệu quả miễn dịch tốt mà không làm quá tải hệ miễn dịch. Mặc dù có một số lo ngại từ phụ huynh về an toàn, nhưng các nghiên cứu cho thấy việc tiêm vaccine cùng lúc không chỉ tiết kiệm thời gian và chi phí cho phụ huynh mà còn giúp hệ miễn dịch trẻ hình thành nhiều kháng thể bảo vệ. Tuy nhiên, cần phải tuân thủ các quy định và khám sàng lọc trước khi tiêm để đảm bảo an toàn cho trẻ.",
     "link": "https://vnexpress.net/chuyen-gia-tiem-gop-nhieu-vaccine-tao-hieu-qua-mien-dich-som-4859682.html",
@@ -3558,6 +3562,33 @@
       },
       {
         "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Lợi ích khi ăn dâu tây thường xuyên",
+    "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
+    "cat": "suc-khoe",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Ăn dâu tây thường xuyên có những lợi ích gì cho sức khỏe?",
+    "answers": [
+      {
+        "text": "Giúp tăng cảm giác no và hỗ trợ giảm cân.",
+        "correct": true
+      },
+      {
+        "text": "Tăng huyết áp nhanh chóng.",
+        "correct": false
+      },
+      {
+        "text": "Gây ra tình trạng thừa cân.",
+        "correct": false
+      },
+      {
+        "text": "Làm yếu hệ miễn dịch.",
         "correct": false
       }
     ]
@@ -4447,68 +4478,6 @@
       },
       {
         "text": "Để sử dụng trong các nghi lễ tôn giáo.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Châu Kiệt Luân: \"Ông hoàng nhạc pop\" đa tài và giàu có, sở hữu tổ ấm như mơ",
-    "content": "Châu Kiệt Luân, được gọi là \"ông hoàng nhạc pop\" châu Á, nổi tiếng với những ca khúc hit và khối tài sản khổng lồ, ước tính hơn 330 triệu USD. Anh không chỉ là ca sĩ mà còn là nhạc sĩ, diễn viên và nhà sản xuất, với nhiều thành công trong sự nghiệp âm nhạc và điện ảnh. Châu Kiệt Luân có gia đình hạnh phúc bên vợ là người mẫu Côn Lăng, cùng ba con nhỏ. Căn hộ sang trọng của họ tại Đài Loan và các bất động sản khác ở Australia và Nhật Bản càng làm nổi bật cuộc sống đầy đủ và viên mãn của họ.",
-    "link": "https://dantri.com.vn/giai-tri/chau-kiet-luan-ong-hoang-nhac-pop-da-tai-va-giau-co-so-huu-to-am-nhu-mo-20250311110307434.htm",
-    "cat": "giai-tri",
-    "positivity": 9,
-    "importance": 8,
-    "question": "Châu Kiệt Luân được biết đến với danh hiệu gì?",
-    "answers": [
-      {
-        "text": "Ông hoàng nhạc pop",
-        "correct": true
-      },
-      {
-        "text": "Người mẫu nổi tiếng",
-        "correct": false
-      },
-      {
-        "text": "Diễn viên điện ảnh",
-        "correct": false
-      },
-      {
-        "text": "Nhà sản xuất âm nhạc",
-        "correct": false
-      },
-      {
-        "text": "Nhạc sĩ trẻ",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Hai trẻ ở Quảng Nam tử vong, ngành y tế báo động dịch sởi",
-    "content": "Hai trẻ em ở huyện Nam Trà My, Quảng Nam, đã tử vong do nghi ngờ mắc bệnh sởi sau khi có triệu chứng sốt cao và phát ban. Bộ Y tế cho biết có khả năng cao bệnh sởi liên quan đến cái chết của hai em, trong bối cảnh địa phương ghi nhận 255 trường hợp sốt phát ban nghi sởi. Ngành y tế đang triển khai các biện pháp phòng chống dịch và khuyến cáo người dân tiêm vaccine sởi vì tình trạng tiêm chủng ở khu vực này chưa đầy đủ trong những năm qua.",
-    "link": "https://vnexpress.net/hai-tre-o-quang-nam-tu-vong-nganh-y-te-bao-dong-dich-soi-4859516.html",
-    "cat": "suc-khoe",
-    "positivity": 2,
-    "importance": 9,
-    "question": "Tại sao hai trẻ em ở Quảng Nam lại tử vong?",
-    "answers": [
-      {
-        "text": "Vì tiêu chảy",
-        "correct": false
-      },
-      {
-        "text": "Vì viêm phổi",
-        "correct": false
-      },
-      {
-        "text": "Vì nghi mắc bệnh sởi",
-        "correct": true
-      },
-      {
-        "text": "Vì tai nạn giao thông",
-        "correct": false
-      },
-      {
-        "text": "Vì không có thuốc chữa",
         "correct": false
       }
     ]
