Update generated content

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,37 @@
     */
     const newsData = [
   {
+    "title": "Ngân hàng Nhà nước khu vực 9 đặt ở Đà Nẵng, 5 giám đốc tỉnh làm phó giám đốc, lãnh đạo giảm một nửa",
+    "content": "Ngân hàng Nhà nước Việt Nam đã công bố quyết định thành lập Ngân hàng Nhà nước khu vực 9 tại Đà Nẵng. Ông Lê Anh Xuân được bổ nhiệm làm giám đốc, cùng với 5 giám đốc tỉnh miền Trung được điều động giữ chức phó giám đốc. Sau khi sắp xếp, số lượng công chức của khu vực giảm từ 226 xuống còn 203, trong đó số lãnh đạo giảm từ 63 xuống còn 29. Cơ cấu tổ chức hiện tại còn 5 phòng làm việc.",
+    "link": "https://tuoitre.vn/ngan-hang-nha-nuoc-khu-vuc-9-dat-o-da-nang-5-giam-doc-tinh-lam-pho-giam-doc-lanh-dao-giam-mot-nua-20250312111344998.htm",
+    "cat": "kinh-doanh",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Ngân hàng Nhà nước khu vực 9 được thành lập ở đâu và ai là giám đốc?",
+    "answers": [
+      {
+        "text": "Ở Đà Nẵng, giám đốc là ông Lê Anh Xuân.",
+        "correct": true
+      },
+      {
+        "text": "Ở Huế, giám đốc là ông Võ Minh.",
+        "correct": false
+      },
+      {
+        "text": "Ở Quảng Nam, giám đốc là ông Phạm Trọng.",
+        "correct": false
+      },
+      {
+        "text": "Ở Quảng Ngãi, giám đốc là ông Đinh Văn Công.",
+        "correct": false
+      },
+      {
+        "text": "Ở Đà Nẵng, giám đốc là ông Nguyễn Đức Đồng.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hòn Sơn Chà vừa được Đà Nẵng tiếp nhận từ Huế có tiềm năng du lịch như thế nào?",
     "content": "Hòn Sơn Chà, một hòn đảo hoang sơ dưới chân núi Hải Vân, vừa được thành phố Đà Nẵng tiếp nhận từ thành phố Huế. Đảo có hệ sinh thái biển phong phú với nhiều loại san hô và cá quý, cùng với bãi cát trắng và nước biển trong vắt, tạo điều kiện lý tưởng cho du lịch. Đà Nẵng dự định phát triển hòn Sơn Chà thành khu nghỉ dưỡng sinh thái cao cấp, nhắm đến đối tượng khách du lịch siêu giàu, nhằm khai thác tiềm năng du lịch lớn của hòn đảo này.",
     "link": "https://tuoitre.vn/hon-son-cha-vua-duoc-da-nang-tiep-nhan-tu-hue-co-tiem-nang-du-lich-nhu-the-nao-20250312105542699.htm",
@@ -734,6 +765,33 @@
     ]
   },
   {
+    "title": "Béo phì, bệnh chồng bệnh",
+    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
+    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
+    "answers": [
+      {
+        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
+        "correct": true
+      },
+      {
+        "text": "Không ảnh hưởng gì đến sức khỏe.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm tăng cân mà không gây bệnh.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ làm đau lưng mà thôi.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Biến chứng nguy hiểm của viêm gan E",
     "content": "Viêm gan E do virus viêm gan E (HEV) gây ra và thường tự khỏi trong vài tuần. Tuy nhiên, một số trường hợp có thể dẫn đến các biến chứng nghiêm trọng như suy gan cấp, biến chứng thần kinh, hoặc hội chứng gan thận, đặc biệt ở phụ nữ mang thai và những người có hệ miễn dịch yếu. Viêm gan E cũng có thể lây truyền từ mẹ sang con với tỷ lệ bệnh cao trong giai đoạn chu sinh. Bác sĩ khuyến cáo người bệnh cần theo dõi và điều trị kịp thời để tránh những biến chứng nặng nề.",
     "link": "https://vnexpress.net/bien-chung-nguy-hiem-cua-viem-gan-e-4860177.html",
@@ -787,33 +845,6 @@
       },
       {
         "text": "Sốt xuất huyết",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Béo phì, bệnh chồng bệnh",
-    "content": "Bà Thảo, 51 tuổi, đã sống với tình trạng béo phì, tiểu đường và tăng huyết áp trong hơn 10 năm mà không được điều trị thích hợp. Sau khi được điều trị tại Bệnh viện Đa khoa Tâm Anh Hà Nội, bà đã giảm 11 kg và cải thiện tình trạng sức khỏe, như giảm đau lưng và kiểm soát huyết áp tốt hơn. Các bác sĩ khuyến nghị rằng người bệnh cần điều trị toàn diện và tầm soát các bệnh lý liên quan để tránh các biến chứng nghiêm trọng do béo phì.",
-    "link": "https://vnexpress.net/beo-phi-benh-chong-benh-4860204.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 9,
-    "question": "Béo phì có ảnh hưởng gì đến sức khỏe của bà Thảo?",
-    "answers": [
-      {
-        "text": "Gây ra nhiều biến chứng nghiêm trọng như tiểu đường và tăng huyết áp.",
-        "correct": true
-      },
-      {
-        "text": "Không ảnh hưởng gì đến sức khỏe.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm tăng cân mà không gây bệnh.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ làm đau lưng mà thôi.",
         "correct": false
       }
     ]
@@ -2952,6 +2983,33 @@
     ]
   },
   {
+    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
+    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
+    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
+    "cat": "the-thao",
+    "positivity": 5,
+    "importance": 7,
+    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
+    "answers": [
+      {
+        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
+        "correct": true
+      },
+      {
+        "text": "Vì không có đủ cầu thủ giỏi.",
+        "correct": false
+      },
+      {
+        "text": "Vì không đủ may mắn trong các trận đấu.",
+        "correct": false
+      },
+      {
+        "text": "Vì không chú trọng vào phòng ngự.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Ai dễ bị ngưng thở khi ngủ?",
     "content": "Hội chứng ngưng thở khi ngủ không chỉ xảy ra ở người lớn mà còn có thể ảnh hưởng đến trẻ em. Nhiều người có suy nghĩ sai lầm rằng trẻ em không mắc phải tình trạng này. Bài viết chỉ ra rằng có nhiều yếu tố làm tăng nguy cơ mắc hội chứng ngưng thở khi ngủ ở trẻ em, do đó cần chú ý và phát hiện sớm để điều trị kịp thời.",
     "link": "https://vnexpress.net/ai-de-bi-ngung-tho-khi-ngu-4859945.html",
@@ -2978,33 +3036,6 @@
       },
       {
         "text": "Người có bệnh tim mạch",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Capello: 'Guardiola mất nhiều Champions League vì kiêu ngạo'",
-    "content": "Cựu HLV Fabio Capello cho rằng Pep Guardiola đã mất nhiều cơ hội giành Champions League do sự kiêu ngạo của mình. Theo ông, Guardiola thường thay đổi chiến thuật một cách kỳ lạ trong các trận đấu quyết định, khiến ông không tập trung vào sức mạnh của cầu thủ. Capello cũng nhấn mạnh rằng ảnh hưởng của Guardiola đã khiến bóng đá Italy bị ảnh hưởng xấu, khi nhiều người cố gắng sao chép phong cách của ông mà không có đủ khả năng tương tự.",
-    "link": "https://vnexpress.net/capello-guardiola-mat-nhieu-champions-league-vi-kieu-ngao-4860006.html",
-    "cat": "the-thao",
-    "positivity": 5,
-    "importance": 7,
-    "question": "Tại sao Capello cho rằng Guardiola mất nhiều Champions League?",
-    "answers": [
-      {
-        "text": "Vì sự kiêu ngạo và thay đổi chiến thuật kỳ lạ.",
-        "correct": true
-      },
-      {
-        "text": "Vì không có đủ cầu thủ giỏi.",
-        "correct": false
-      },
-      {
-        "text": "Vì không đủ may mắn trong các trận đấu.",
-        "correct": false
-      },
-      {
-        "text": "Vì không chú trọng vào phòng ngự.",
         "correct": false
       }
     ]
@@ -3930,33 +3961,6 @@
     ]
   },
   {
-    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
-    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
-    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
-    "answers": [
-      {
-        "text": "Có, nhưng không phải tất cả trường hợp.",
-        "correct": true
-      },
-      {
-        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
-        "correct": false
-      },
-      {
-        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
-        "correct": false
-      },
-      {
-        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Lợi ích khi ăn dâu tây thường xuyên",
     "content": "Dâu tây là một loại trái cây ít calo và giàu chất xơ, giúp gia tăng cảm giác no và hỗ trợ quá trình giảm cân. Chúng cũng chứa nhiều nước, vitamin C và chất chống oxy hóa, giúp tăng cường hệ miễn dịch và bảo vệ tế bào khỏi tổn thương. Ngoài ra, dâu tây có chỉ số đường huyết thấp, giúp điều chỉnh lượng đường trong máu và giảm cảm giác thèm ăn. Việc bổ sung dâu tây vào chế độ ăn uống hàng ngày mang lại nhiều lợi ích cho sức khỏe tổng thể.",
     "link": "https://vnexpress.net/loi-ich-khi-an-dau-tay-thuong-xuyen-4859532.html",
@@ -3979,6 +3983,33 @@
       },
       {
         "text": "Làm yếu hệ miễn dịch.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Gan nhiễm mỡ có tiến triển thành viêm gan?",
+    "content": "Gan nhiễm mỡ là tình trạng mỡ thừa tích tụ trong gan, có thể dẫn đến viêm gan, nhưng không phải lúc nào cũng như vậy. Những người mắc gan nhiễm mỡ không do bia rượu thường ít có nguy cơ tiến triển thành viêm gan. Ngược lại, gan nhiễm mỡ do bia rượu có thể gây tổn thương nghiêm trọng và dẫn đến xơ gan nếu không được điều trị. Để phòng ngừa, người bệnh cần thay đổi lối sống, chế độ ăn uống và tập luyện thường xuyên.",
+    "link": "https://vnexpress.net/gan-nhiem-mo-co-tien-trien-thanh-viem-gan-4859874.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Gan nhiễm mỡ có thể chuyển thành viêm gan không?",
+    "answers": [
+      {
+        "text": "Có, nhưng không phải tất cả trường hợp.",
+        "correct": true
+      },
+      {
+        "text": "Không, gan nhiễm mỡ không ảnh hưởng gì.",
+        "correct": false
+      },
+      {
+        "text": "Chỉ có trường hợp gan nhiễm mỡ do bia rượu mới tiến triển.",
+        "correct": false
+      },
+      {
+        "text": "Gan nhiễm mỡ luôn dẫn đến viêm gan.",
         "correct": false
       }
     ]
@@ -4810,64 +4841,6 @@
       },
       {
         "text": "Rừng Măng Đen chỉ có một màu xanh duy nhất",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Tạo sân chơi minh bạch cho tiền mã hóa",
-    "content": "Bài viết nhấn mạnh sự cần thiết phải có một sân chơi minh bạch cho thị trường tiền mã hóa tại Việt Nam, nơi mà hàng triệu người tham gia nhưng vẫn thiếu sự hiểu biết và bảo vệ pháp lý. Nhiều người đã đầu tư lớn mà không có kiến thức, dẫn đến rủi ro cao và dễ bị lừa đảo. Các chuyên gia khuyến nghị rằng việc thiết lập hành lang pháp lý rõ ràng để bảo vệ nhà đầu tư và khuyến khích sự đổi mới trong lĩnh vực này là rất quan trọng. Họ cũng nhấn mạnh rằng chỉ những người có kiến thức và chiến lược đầu tư rõ ràng mới có thể đạt được lợi nhuận bền vững.",
-    "link": "https://tuoitre.vn/tao-san-choi-minh-bach-cho-tien-ma-hoa-20250311083103574.htm",
-    "cat": "kinh-doanh",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Tại sao cần có hành lang pháp lý rõ ràng cho tiền mã hóa ở Việt Nam?",
-    "answers": [
-      {
-        "text": "Để bảo vệ nhà đầu tư và khuyến khích sự đổi mới",
-        "correct": true
-      },
-      {
-        "text": "Để tăng cường việc sử dụng tiền mặt",
-        "correct": false
-      },
-      {
-        "text": "Để cấm hoàn toàn việc giao dịch tiền mã hóa",
-        "correct": false
-      },
-      {
-        "text": "Để hạn chế sự phát triển của công nghệ blockchain",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cơn sốt mua bụi đất ở ngân hàng để 'hút tài lộc'",
-    "content": "Tại Trung Quốc, hiện tượng mua các túi đất từ ngân hàng với hy vọng thu hút tài lộc đang diễn ra mạnh mẽ. Những túi đất này được quảng cáo là thu thập từ các ngân hàng lớn và có giá lên tới 888 tệ. Tuy nhiên, nhiều ý kiến cho rằng đây là một chiêu trò và không có cơ sở khoa học. Luật sư cũng cảnh báo về nguy cơ lừa đảo nếu người bán không chứng minh được nguồn gốc của đất.",
-    "link": "https://vnexpress.net/con-sot-mua-bui-dat-o-ngan-hang-de-hut-tai-loc-4859477.html",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 6,
-    "question": "Tại sao người dân Trung Quốc lại mua túi đất từ ngân hàng?",
-    "answers": [
-      {
-        "text": "Để thu hút tài lộc và nhanh chóng trở nên giàu có.",
-        "correct": true
-      },
-      {
-        "text": "Để trồng cây cảnh trong văn phòng.",
-        "correct": false
-      },
-      {
-        "text": "Để làm quà tặng cho bạn bè.",
-        "correct": false
-      },
-      {
-        "text": "Vì đất ngân hàng có giá trị cao.",
-        "correct": false
-      },
-      {
-        "text": "Để sử dụng trong các nghi lễ tôn giáo.",
         "correct": false
       }
     ]
